--- a/scss/_var-icons.scss
+++ b/scss/_var-icons.scss
@@ -508,7 +508,6 @@ $adi-icons: (
      "grid": e9fb,
      "group": e9fc,
      "heart": e9fd,
-     "heart-1": e9fe,
      "help": e9ff,
      "label": ea00,
      "lan": ea01,
@@ -603,4 +602,19 @@ $adi-icons: (
      "familia": ea5a,
      "cloud-off-outline": e86b,
      "cloud-check-outline": ea5b,
+     "selection": ea5c,
+     "view-day": ea5d,
+     "numeric": ea5e,
+     "decimal": ea5f,
+     "account-circle": ea60,
+     "dots-horizontal": ea61,
+     "page-layout-header": ea62,
+     "view-grid": ea63,
+     "view-quilt": ea64,
+     "auto-fix": ea65,
+     "form-textbox": ea66,
+     "format-list-bulleted": ea67,
+     "clipboard-plus": ea68,
+     "reply": ea69,
+     "hospital-building": ea6a,
 );
