--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -5,7 +5,7 @@ $mdi-font-weight:      "normal";
 $mdi-font-path:        "../fonts" !default;
 $mdi-font-size-base:   24px !default;
 $mdi-css-prefix:       mdi !default;
-$mdi-version:          "5.3.45" !default;
+$mdi-version:          "5.4.55" !default;
 
 $mdi-icons: (
   "ab-testing": F01C9,
@@ -14,8 +14,13 @@ $mdi-icons: (
   "abugida-devanagari": F132A,
   "abugida-thai": F132B,
   "access-point": F0003,
+  "access-point-check": F1538,
+  "access-point-minus": F1539,
   "access-point-network": F0002,
   "access-point-network-off": F0BE1,
+  "access-point-off": F1511,
+  "access-point-plus": F153A,
+  "access-point-remove": F153B,
   "account": F0004,
   "account-alert": F0005,
   "account-alert-outline": F0B50,
@@ -81,6 +86,8 @@ $mdi-icons: (
   "account-plus-outline": F0801,
   "account-question": F0B59,
   "account-question-outline": F0B5A,
+  "account-reactivate": F152B,
+  "account-reactivate-outline": F152C,
   "account-remove": F0015,
   "account-remove-outline": F0AED,
   "account-search": F0016,
@@ -91,6 +98,7 @@ $mdi-icons: (
   "account-star-outline": F0BE8,
   "account-supervisor": F0A8B,
   "account-supervisor-circle": F0A8C,
+  "account-supervisor-circle-outline": F14EC,
   "account-supervisor-outline": F112D,
   "account-switch": F0019,
   "account-switch-outline": F04CB,
@@ -352,6 +360,8 @@ $mdi-icons: (
   "apps-box": F0D46,
   "arch": F08C7,
   "archive": F003C,
+  "archive-alert": F14FD,
+  "archive-alert-outline": F14FE,
   "archive-arrow-down": F1259,
   "archive-arrow-down-outline": F125A,
   "archive-arrow-up": F125B,
@@ -564,7 +574,15 @@ $mdi-icons: (
   "bash": F1183,
   "basket": F0076,
   "basket-fill": F0077,
+  "basket-minus": F1523,
+  "basket-minus-outline": F1524,
+  "basket-off": F1525,
+  "basket-off-outline": F1526,
   "basket-outline": F1181,
+  "basket-plus": F1527,
+  "basket-plus-outline": F1528,
+  "basket-remove": F1529,
+  "basket-remove-outline": F152A,
   "basket-unfill": F0078,
   "basketball": F0806,
   "basketball-hoop": F0C3B,
@@ -668,6 +686,7 @@ $mdi-icons: (
   "bee-flower": F0FA2,
   "beehive-off-outline": F13ED,
   "beehive-outline": F10CE,
+  "beekeeper": F14E2,
   "beer": F0098,
   "beer-outline": F130C,
   "bell": F009A,
@@ -734,6 +753,8 @@ $mdi-icons: (
   "book-account": F13AD,
   "book-account-outline": F13AE,
   "book-alphabet": F061D,
+  "book-check": F14F3,
+  "book-check-outline": F14F4,
   "book-cross": F00A2,
   "book-information-variant": F106F,
   "book-lock": F079A,
@@ -745,9 +766,10 @@ $mdi-icons: (
   "book-multiple-outline": F0436,
   "book-music": F0067,
   "book-open": F00BD,
+  "book-open-blank-variant": F00BE,
   "book-open-outline": F0B63,
   "book-open-page-variant": F05DA,
-  "book-open-variant": F00BE,
+  "book-open-variant": F14F7,
   "book-outline": F0B64,
   "book-play": F0E82,
   "book-play-outline": F0E83,
@@ -1024,12 +1046,14 @@ $mdi-icons: (
   "car-hatchback": F07A9,
   "car-info": F11BE,
   "car-key": F0B6D,
+  "car-lifted-pickup": F152D,
   "car-light-dimmed": F0C4A,
   "car-light-fog": F0C4B,
   "car-light-high": F0C4C,
   "car-limousine": F08CD,
   "car-multiple": F0B6E,
   "car-off": F0E1C,
+  "car-outline": F14ED,
   "car-parking-lights": F0D63,
   "car-pickup": F07AA,
   "car-seat": F0FA4,
@@ -1091,6 +1115,9 @@ $mdi-icons: (
   "case-sensitive-alt": F0113,
   "cash": F0114,
   "cash-100": F0115,
+  "cash-check": F14EE,
+  "cash-lock": F14EA,
+  "cash-lock-open": F14EB,
   "cash-marker": F0DB8,
   "cash-minus": F1260,
   "cash-multiple": F0116,
@@ -1149,6 +1176,9 @@ $mdi-icons: (
   "chart-bar-stacked": F076A,
   "chart-bell-curve": F0C50,
   "chart-bell-curve-cumulative": F0FA7,
+  "chart-box": F154D,
+  "chart-box-outline": F154E,
+  "chart-box-plus-outline": F154F,
   "chart-bubble": F05E3,
   "chart-donut": F07AF,
   "chart-donut-variant": F07B0,
@@ -1309,6 +1339,8 @@ $mdi-icons: (
   "clipboard-check-multiple": F1263,
   "clipboard-check-multiple-outline": F1264,
   "clipboard-check-outline": F08A8,
+  "clipboard-edit": F14E5,
+  "clipboard-edit-outline": F14E6,
   "clipboard-file": F1265,
   "clipboard-file-outline": F1266,
   "clipboard-flow": F06C8,
@@ -1626,6 +1658,7 @@ $mdi-icons: (
   "currency-jpy": F07BC,
   "currency-krw": F07BD,
   "currency-kzt": F0865,
+  "currency-mnt": F1512,
   "currency-ngn": F01B0,
   "currency-php": F09E6,
   "currency-rial": F0E9C,
@@ -1648,6 +1681,12 @@ $mdi-icons: (
   "cursor-move": F01BE,
   "cursor-pointer": F01BD,
   "cursor-text": F05E7,
+  "data-matrix": F153C,
+  "data-matrix-edit": F153D,
+  "data-matrix-minus": F153E,
+  "data-matrix-plus": F153F,
+  "data-matrix-remove": F1540,
+  "data-matrix-scan": F1541,
   "database": F01BC,
   "database-check": F0AA9,
   "database-edit": F0B86,
@@ -1777,6 +1816,7 @@ $mdi-icons: (
   "dock-bottom": F10A9,
   "dock-left": F10AA,
   "dock-right": F10AB,
+  "dock-top": F1513,
   "dock-window": F10AC,
   "docker": F0868,
   "doctor": F0A42,
@@ -1960,6 +2000,12 @@ $mdi-icons: (
   "ethernet": F0200,
   "ethernet-cable": F0201,
   "ethernet-cable-off": F0202,
+  "ev-plug-ccs1": F1519,
+  "ev-plug-ccs2": F151A,
+  "ev-plug-chademo": F151B,
+  "ev-plug-tesla": F151C,
+  "ev-plug-type1": F151D,
+  "ev-plug-type2": F151E,
   "ev-station": F05F1,
   "evernote": F0204,
   "excavator": F1025,
@@ -2004,6 +2050,7 @@ $mdi-icons: (
   "face-woman": F1077,
   "face-woman-outline": F1078,
   "facebook": F020C,
+  "facebook-gaming": F07DD,
   "facebook-messenger": F020E,
   "facebook-workplace": F0B31,
   "factory": F020F,
@@ -2061,6 +2108,8 @@ $mdi-icons: (
   "file-document": F0219,
   "file-document-edit": F0DC8,
   "file-document-edit-outline": F0DC9,
+  "file-document-multiple": F1517,
+  "file-document-multiple-outline": F1518,
   "file-document-outline": F09EE,
   "file-download": F0965,
   "file-download-outline": F0966,
@@ -2159,6 +2208,8 @@ $mdi-icons: (
   "filter-menu-outline": F10E6,
   "filter-minus": F0EEE,
   "filter-minus-outline": F0EEF,
+  "filter-off": F14EF,
+  "filter-off-outline": F14F0,
   "filter-outline": F0233,
   "filter-plus": F0EF0,
   "filter-plus-outline": F0EF1,
@@ -2435,6 +2486,7 @@ $mdi-icons: (
   "format-text-rotation-up": F0FBE,
   "format-text-rotation-vertical": F0FBF,
   "format-text-variant": F0E32,
+  "format-text-variant-outline": F150F,
   "format-text-wrapping-clip": F0D0E,
   "format-text-wrapping-overflow": F0D0F,
   "format-text-wrapping-wrap": F0D10,
@@ -2628,6 +2680,7 @@ $mdi-icons: (
   "graph": F1049,
   "graph-outline": F104A,
   "graphql": F0877,
+  "grass": F1510,
   "grave-stone": F0BA2,
   "grease-pencil": F0648,
   "greater-than": F096D,
@@ -2831,6 +2884,7 @@ $mdi-icons: (
   "human": F02E6,
   "human-baby-changing-table": F138B,
   "human-child": F02E7,
+  "human-edit": F14E8,
   "human-female": F0649,
   "human-female-boy": F0A59,
   "human-female-female": F0A5A,
@@ -3365,7 +3419,6 @@ $mdi-icons: (
   "mirror": F11FD,
   "mixed-martial-arts": F0D8F,
   "mixed-reality": F087F,
-  "mixer": F07DD,
   "molecule": F0BAC,
   "molecule-co": F12FE,
   "molecule-co2": F07E4,
@@ -3519,6 +3572,10 @@ $mdi-icons: (
   "note-text": F039E,
   "note-text-outline": F11D7,
   "notebook": F082E,
+  "notebook-check": F14F5,
+  "notebook-check-outline": F14F6,
+  "notebook-edit": F14E7,
+  "notebook-edit-outline": F14E9,
   "notebook-multiple": F0E55,
   "notebook-outline": F0EBF,
   "notification-clear-all": F039F,
@@ -3625,6 +3682,9 @@ $mdi-icons: (
   "odnoklassniki": F03C5,
   "offer": F121B,
   "office-building": F0991,
+  "office-building-marker": F1520,
+  "office-building-marker-outline": F1521,
+  "office-building-outline": F151F,
   "oil": F03C7,
   "oil-lamp": F0F19,
   "oil-level": F1053,
@@ -3803,6 +3863,8 @@ $mdi-icons: (
   "phone-paused-outline": F119A,
   "phone-plus": F0659,
   "phone-plus-outline": F119B,
+  "phone-remove": F152F,
+  "phone-remove-outline": F1530,
   "phone-return": F082F,
   "phone-return-outline": F119C,
   "phone-ring": F11AB,
@@ -3932,6 +3994,7 @@ $mdi-icons: (
   "power-socket-de": F1107,
   "power-socket-eu": F07E7,
   "power-socket-fr": F1108,
+  "power-socket-it": F14FF,
   "power-socket-jp": F1109,
   "power-socket-uk": F07E8,
   "power-socket-us": F07E9,
@@ -3962,6 +4025,7 @@ $mdi-icons: (
   "progress-clock": F0996,
   "progress-close": F110A,
   "progress-download": F0997,
+  "progress-question": F1522,
   "progress-upload": F0998,
   "progress-wrench": F0CBD,
   "projector": F042E,
@@ -4026,6 +4090,7 @@ $mdi-icons: (
   "radius": F0CC0,
   "radius-outline": F0CC1,
   "railroad-light": F0F1E,
+  "rake": F1544,
   "raspberry-pi": F043F,
   "ray-end": F0440,
   "ray-end-arrow": F0441,
@@ -4327,6 +4392,7 @@ $mdi-icons: (
   "shape-polygon-plus": F065E,
   "shape-rectangle-plus": F065F,
   "shape-square-plus": F0660,
+  "shape-square-rounded-plus": F14FA,
   "share": F0496,
   "share-all": F11F4,
   "share-all-outline": F11F5,
@@ -4335,6 +4401,7 @@ $mdi-icons: (
   "share-off-outline": F0F24,
   "share-outline": F0932,
   "share-variant": F0497,
+  "share-variant-outline": F1514,
   "sheep": F0CC6,
   "shield": F0498,
   "shield-account": F088F,
@@ -4386,6 +4453,7 @@ $mdi-icons: (
   "shopping-music": F049B,
   "shopping-outline": F11D5,
   "shopping-search": F0F84,
+  "shore": F14F9,
   "shovel": F0710,
   "shovel-off": F0711,
   "shower": F09A0,
@@ -4402,6 +4470,7 @@ $mdi-icons: (
   "sign-direction-minus": F1000,
   "sign-direction-plus": F0FDC,
   "sign-direction-remove": F0FDD,
+  "sign-pole": F14F8,
   "sign-real-estate": F1118,
   "sign-text": F0782,
   "signal": F04A2,
@@ -4490,11 +4559,13 @@ $mdi-icons: (
   "smoking-off": F04B5,
   "smoking-pipe": F140D,
   "smoking-pipe-off": F1428,
+  "snake": F150E,
   "snapchat": F04B6,
   "snowboard": F1307,
   "snowflake": F0717,
   "snowflake-alert": F0F29,
   "snowflake-melt": F12CB,
+  "snowflake-off": F14E3,
   "snowflake-variant": F0F2A,
   "snowman": F04B7,
   "soccer": F04B8,
@@ -4517,6 +4588,12 @@ $mdi-icons: (
   "sort-bool-ascending-variant": F1386,
   "sort-bool-descending": F1387,
   "sort-bool-descending-variant": F1388,
+  "sort-calendar-ascending": F1547,
+  "sort-calendar-descending": F1548,
+  "sort-clock-ascending": F1549,
+  "sort-clock-ascending-outline": F154A,
+  "sort-clock-descending": F154B,
+  "sort-clock-descending-outline": F154C,
   "sort-descending": F04BD,
   "sort-numeric-ascending": F1389,
   "sort-numeric-ascending-variant": F090D,
@@ -4555,6 +4632,7 @@ $mdi-icons: (
   "space-invaders": F0BC9,
   "space-station": F1383,
   "spade": F0E65,
+  "sparkles": F1545,
   "speaker": F04C3,
   "speaker-bluetooth": F09A2,
   "speaker-multiple": F0D38,
@@ -4567,6 +4645,7 @@ $mdi-icons: (
   "spider": F11EA,
   "spider-thread": F11EB,
   "spider-web": F0BCA,
+  "spirit-level": F14F1,
   "spoon-sugar": F1429,
   "spotify": F04C7,
   "spotlight": F04C8,
@@ -4578,6 +4657,7 @@ $mdi-icons: (
   "sprout": F0E66,
   "sprout-outline": F0E67,
   "square": F0764,
+  "square-circle": F1500,
   "square-edit-outline": F090C,
   "square-medium": F0A13,
   "square-medium-outline": F0A14,
@@ -4586,6 +4666,8 @@ $mdi-icons: (
   "square-outline": F0763,
   "square-root": F0784,
   "square-root-box": F09A3,
+  "square-rounded": F14FB,
+  "square-rounded-outline": F14FC,
   "square-small": F0A15,
   "square-wave": F147B,
   "squeegee": F0AE1,
@@ -4689,6 +4771,7 @@ $mdi-icons: (
   "syllabary-hiragana": F1334,
   "syllabary-katakana": F1335,
   "syllabary-katakana-halfwidth": F1336,
+  "symbol": F1501,
   "symfony": F0AE6,
   "sync": F04E6,
   "sync-alert": F04E7,
@@ -4842,6 +4925,7 @@ $mdi-icons: (
   "thermometer-lines": F0510,
   "thermometer-low": F10C3,
   "thermometer-minus": F0E04,
+  "thermometer-off": F1531,
   "thermometer-plus": F0E05,
   "thermostat": F0393,
   "thermostat-box": F0891,
@@ -4865,13 +4949,19 @@ $mdi-icons: (
   "timeline": F0BD1,
   "timeline-alert": F0F95,
   "timeline-alert-outline": F0F98,
+  "timeline-check": F1532,
+  "timeline-check-outline": F1533,
   "timeline-clock": F11FB,
   "timeline-clock-outline": F11FC,
   "timeline-help": F0F99,
   "timeline-help-outline": F0F9A,
+  "timeline-minus": F1534,
+  "timeline-minus-outline": F1535,
   "timeline-outline": F0BD2,
   "timeline-plus": F0F96,
   "timeline-plus-outline": F0F97,
+  "timeline-remove": F1536,
+  "timeline-remove-outline": F1537,
   "timeline-text": F0BD3,
   "timeline-text-outline": F0BD4,
   "timer": F13AB,
@@ -4950,8 +5040,10 @@ $mdi-icons: (
   "transfer-right": F0530,
   "transfer-up": F0DA3,
   "transit-connection": F0D3C,
+  "transit-connection-horizontal": F1546,
   "transit-connection-variant": F0D3D,
   "transit-detour": F0F8B,
+  "transit-skip": F1515,
   "transit-transfer": F06AE,
   "transition": F0915,
   "transition-masked": F0916,
@@ -5001,7 +5093,9 @@ $mdi-icons: (
   "tumble-dryer-alert": F11BA,
   "tumble-dryer-off": F11BB,
   "tune": F062E,
+  "tune-variant": F1542,
   "tune-vertical": F066A,
+  "tune-vertical-variant": F1543,
   "turnstile": F0CD5,
   "turnstile-outline": F0CD6,
   "turtle": F0CD7,
@@ -5095,6 +5189,7 @@ $mdi-icons: (
   "video-box-off": F00FE,
   "video-check": F1069,
   "video-check-outline": F106A,
+  "video-high-definition": F152E,
   "video-image": F091A,
   "video-input-antenna": F083F,
   "video-input-component": F0840,
@@ -5209,15 +5304,27 @@ $mdi-icons: (
   "watch-vibrate": F06B1,
   "watch-vibrate-off": F0CDA,
   "water": F058C,
+  "water-alert": F1502,
+  "water-alert-outline": F1503,
   "water-boiler": F0F92,
   "water-boiler-alert": F11B3,
   "water-boiler-off": F11B4,
+  "water-check": F1504,
+  "water-check-outline": F1505,
+  "water-minus": F1506,
+  "water-minus-outline": F1507,
   "water-off": F058D,
+  "water-off-outline": F1508,
   "water-outline": F0E0A,
   "water-percent": F058E,
+  "water-percent-alert": F1509,
+  "water-plus": F150A,
+  "water-plus-outline": F150B,
   "water-polo": F12A0,
   "water-pump": F058F,
   "water-pump-off": F0F93,
+  "water-remove": F150C,
+  "water-remove-outline": F150D,
   "water-well": F106B,
   "water-well-outline": F106C,
   "watering-can": F1481,
@@ -5250,6 +5357,7 @@ $mdi-icons: (
   "weather-snowy-rainy": F067F,
   "weather-sunny": F0599,
   "weather-sunny-alert": F0F37,
+  "weather-sunny-off": F14E4,
   "weather-sunset": F059A,
   "weather-sunset-down": F059B,
   "weather-sunset-up": F059C,
@@ -5270,6 +5378,7 @@ $mdi-icons: (
   "weight-lifter": F115D,
   "weight-pound": F09B5,
   "whatsapp": F05A3,
+  "wheel-barrow": F14F2,
   "wheelchair-accessibility": F05A4,
   "whistle": F09B6,
   "whistle-outline": F12BC,
@@ -5335,6 +5444,7 @@ $mdi-icons: (
   "youtube-studio": F0847,
   "youtube-subscription": F0D40,
   "youtube-tv": F0448,
+  "yurt": F1516,
   "z-wave": F0AEA,
   "zend": F0AEB,
   "zigbee": F0D41,
