--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -5,7 +5,7 @@ $mdi-font-weight:      "normal";
 $mdi-font-path:        "../fonts" !default;
 $mdi-font-size-base:   24px !default;
 $mdi-css-prefix:       mdi !default;
-$mdi-version:          "5.4.55" !default;
+$mdi-version:          "5.5.55" !default;
 
 $mdi-icons: (
   "ab-testing": F01C9,
@@ -352,8 +352,10 @@ $mdi-icons: (
   "apple-keyboard-shift": F0636,
   "apple-safari": F0039,
   "application": F0614,
+  "application-cog": F1577,
   "application-export": F0DAD,
   "application-import": F0DAE,
+  "application-settings": F1555,
   "approximately-equal": F0F9E,
   "approximately-equal-box": F0F9F,
   "apps": F003B,
@@ -377,9 +379,11 @@ $mdi-icons: (
   "arrow-bottom-left": F0042,
   "arrow-bottom-left-bold-outline": F09B7,
   "arrow-bottom-left-thick": F09B8,
+  "arrow-bottom-left-thin-circle-outline": F1596,
   "arrow-bottom-right": F0043,
   "arrow-bottom-right-bold-outline": F09B9,
   "arrow-bottom-right-thick": F09BA,
+  "arrow-bottom-right-thin-circle-outline": F1595,
   "arrow-collapse": F0615,
   "arrow-collapse-all": F0044,
   "arrow-collapse-down": F0792,
@@ -406,6 +410,7 @@ $mdi-icons: (
   "arrow-down-drop-circle": F004A,
   "arrow-down-drop-circle-outline": F004B,
   "arrow-down-thick": F0046,
+  "arrow-down-thin-circle-outline": F1599,
   "arrow-expand": F0616,
   "arrow-expand-all": F004C,
   "arrow-expand-down": F0796,
@@ -432,6 +437,7 @@ $mdi-icons: (
   "arrow-left-right-bold": F0E74,
   "arrow-left-right-bold-outline": F09C1,
   "arrow-left-thick": F004E,
+  "arrow-left-thin-circle-outline": F159A,
   "arrow-right": F0054,
   "arrow-right-bold": F0734,
   "arrow-right-bold-box": F0735,
@@ -446,6 +452,7 @@ $mdi-icons: (
   "arrow-right-drop-circle": F0059,
   "arrow-right-drop-circle-outline": F005A,
   "arrow-right-thick": F0055,
+  "arrow-right-thin-circle-outline": F1598,
   "arrow-split-horizontal": F093B,
   "arrow-split-vertical": F093C,
   "arrow-top-left": F005B,
@@ -453,11 +460,13 @@ $mdi-icons: (
   "arrow-top-left-bottom-right": F0E75,
   "arrow-top-left-bottom-right-bold": F0E76,
   "arrow-top-left-thick": F09C4,
+  "arrow-top-left-thin-circle-outline": F1593,
   "arrow-top-right": F005C,
   "arrow-top-right-bold-outline": F09C5,
   "arrow-top-right-bottom-left": F0E77,
   "arrow-top-right-bottom-left-bold": F0E78,
   "arrow-top-right-thick": F09C6,
+  "arrow-top-right-thin-circle-outline": F1594,
   "arrow-up": F005D,
   "arrow-up-bold": F0737,
   "arrow-up-bold-box": F0738,
@@ -475,6 +484,7 @@ $mdi-icons: (
   "arrow-up-drop-circle": F0062,
   "arrow-up-drop-circle-outline": F0063,
   "arrow-up-thick": F005E,
+  "arrow-up-thin-circle-outline": F1597,
   "arrow-vertical-lock": F115C,
   "artstation": F0B5B,
   "aspect-ratio": F0A24,
@@ -546,6 +556,10 @@ $mdi-icons: (
   "bag-personal-off": F0E11,
   "bag-personal-off-outline": F0E12,
   "bag-personal-outline": F0E13,
+  "bag-suitcase": F158B,
+  "bag-suitcase-off": F158D,
+  "bag-suitcase-off-outline": F158E,
+  "bag-suitcase-outline": F158C,
   "baguette": F0F3E,
   "balloon": F0A26,
   "ballot": F09C9,
@@ -925,6 +939,8 @@ $mdi-icons: (
   "bus-stop": F1012,
   "bus-stop-covered": F1013,
   "bus-stop-uncovered": F1014,
+  "butterfly": F1589,
+  "butterfly-outline": F158A,
   "cable-data": F1394,
   "cached": F00E8,
   "cactus": F0DB5,
@@ -933,6 +949,7 @@ $mdi-icons: (
   "cake-variant": F00EB,
   "calculator": F00EC,
   "calculator-variant": F0A9A,
+  "calculator-variant-outline": F15A6,
   "calendar": F00ED,
   "calendar-account": F0ED7,
   "calendar-account-outline": F0ED8,
@@ -945,6 +962,7 @@ $mdi-icons: (
   "calendar-check": F00EF,
   "calendar-check-outline": F0C44,
   "calendar-clock": F00F0,
+  "calendar-cursor": F157B,
   "calendar-edit": F08A7,
   "calendar-export": F0B24,
   "calendar-heart": F09D2,
@@ -1502,12 +1520,16 @@ $mdi-icons: (
   "comment-arrow-left-outline": F09E2,
   "comment-arrow-right": F09E3,
   "comment-arrow-right-outline": F09E4,
+  "comment-bookmark": F15AE,
+  "comment-bookmark-outline": F15AF,
   "comment-check": F017F,
   "comment-check-outline": F0180,
   "comment-edit": F11BF,
   "comment-edit-outline": F12C4,
   "comment-eye": F0A3A,
   "comment-eye-outline": F0A3B,
+  "comment-flash": F15B0,
+  "comment-flash-outline": F15B1,
   "comment-multiple": F085F,
   "comment-multiple-outline": F0181,
   "comment-outline": F0182,
@@ -1681,6 +1703,7 @@ $mdi-icons: (
   "cursor-move": F01BE,
   "cursor-pointer": F01BD,
   "cursor-text": F05E7,
+  "dance-pole": F1578,
   "data-matrix": F153C,
   "data-matrix-edit": F153D,
   "data-matrix-minus": F153E,
@@ -1721,6 +1744,8 @@ $mdi-icons: (
   "delete-alert-outline": F10A6,
   "delete-circle": F0683,
   "delete-circle-outline": F0B88,
+  "delete-clock": F1556,
+  "delete-clock-outline": F1557,
   "delete-empty": F06CC,
   "delete-empty-outline": F0E9D,
   "delete-forever": F05E8,
@@ -1895,6 +1920,7 @@ $mdi-icons: (
   "egg-off": F13F0,
   "egg-off-outline": F13F1,
   "egg-outline": F13F2,
+  "eiffel-tower": F156B,
   "eight-track": F09EA,
   "eject": F01EA,
   "eject-outline": F0B91,
@@ -1975,6 +2001,8 @@ $mdi-icons: (
   "emoticon-poop-outline": F0C75,
   "emoticon-sad": F0C76,
   "emoticon-sad-outline": F01F8,
+  "emoticon-sick": F157C,
+  "emoticon-sick-outline": F157D,
   "emoticon-tongue": F01F9,
   "emoticon-tongue-outline": F0C77,
   "emoticon-wink": F0C78,
@@ -2043,6 +2071,8 @@ $mdi-icons: (
   "eyedropper-variant": F020B,
   "face": F0643,
   "face-agent": F0D70,
+  "face-mask": F1586,
+  "face-mask-outline": F1587,
   "face-outline": F0B96,
   "face-profile": F0644,
   "face-profile-woman": F1076,
@@ -2388,6 +2418,8 @@ $mdi-icons: (
   "food-drumstick-off-outline": F1469,
   "food-drumstick-outline": F1420,
   "food-fork-drink": F05F2,
+  "food-halal": F1572,
+  "food-kosher": F1573,
   "food-off": F05F3,
   "food-steak": F146A,
   "food-steak-off": F146B,
@@ -2706,6 +2738,7 @@ $mdi-icons: (
   "hammer-wrench": F1323,
   "hand": F0A4F,
   "hand-heart": F10F1,
+  "hand-heart-outline": F157E,
   "hand-left": F0E46,
   "hand-okay": F0A50,
   "hand-peace": F0A51,
@@ -2716,10 +2749,13 @@ $mdi-icons: (
   "hand-pointing-up": F0A55,
   "hand-right": F0E47,
   "hand-saw": F0E48,
+  "hand-wash": F157F,
+  "hand-wash-outline": F1580,
   "hand-water": F139F,
   "handball": F0F53,
   "handcuffs": F113E,
   "handshake": F1218,
+  "handshake-outline": F15A1,
   "hanger": F02C8,
   "hard-hat": F096F,
   "harddisk": F02CA,
@@ -2883,6 +2919,9 @@ $mdi-icons: (
   "hulu": F0829,
   "human": F02E6,
   "human-baby-changing-table": F138B,
+  "human-cane": F1581,
+  "human-capacity-decrease": F159B,
+  "human-capacity-increase": F159C,
   "human-child": F02E7,
   "human-edit": F14E8,
   "human-female": F0649,
@@ -2890,6 +2929,7 @@ $mdi-icons: (
   "human-female-female": F0A5A,
   "human-female-girl": F0A5B,
   "human-greeting": F064A,
+  "human-greeting-proximity": F159D,
   "human-handsdown": F064B,
   "human-handsup": F064C,
   "human-male": F064D,
@@ -2901,9 +2941,12 @@ $mdi-icons: (
   "human-male-height-variant": F0EFC,
   "human-male-male": F0A5E,
   "human-pregnant": F05CF,
+  "human-queue": F1571,
+  "human-scooter": F11E9,
   "human-wheelchair": F138D,
   "humble-bundle": F0744,
   "hvac": F1352,
+  "hvac-off": F159E,
   "hydraulic-oil-level": F1324,
   "hydraulic-oil-temperature": F1325,
   "hydro-power": F12E5,
@@ -2970,6 +3013,8 @@ $mdi-icons: (
   "inbox-multiple": F08B0,
   "inbox-multiple-outline": F0BA8,
   "inbox-outline": F1274,
+  "inbox-remove": F159F,
+  "inbox-remove-outline": F15A0,
   "incognito": F05F9,
   "incognito-circle": F1421,
   "incognito-circle-off": F1422,
@@ -3000,6 +3045,7 @@ $mdi-icons: (
   "judaism": F097A,
   "jump-rope": F12FF,
   "kabaddi": F0D87,
+  "kangaroo": F1558,
   "karate": F082C,
   "keg": F0305,
   "kettle": F05FA,
@@ -3013,6 +3059,8 @@ $mdi-icons: (
   "kettlebell": F1300,
   "key": F0306,
   "key-arrow-right": F1312,
+  "key-chain": F1574,
+  "key-chain-variant": F1575,
   "key-change": F0307,
   "key-link": F119F,
   "key-minus": F0308,
@@ -3065,9 +3113,11 @@ $mdi-icons: (
   "label-percent-outline": F12EB,
   "label-variant": F0ACD,
   "label-variant-outline": F0ACE,
+  "ladder": F15A2,
   "ladybug": F082D,
   "lambda": F0627,
   "lamp": F06B5,
+  "lamps": F1576,
   "lan": F0317,
   "lan-check": F12AA,
   "lan-connect": F0318,
@@ -3181,6 +3231,7 @@ $mdi-icons: (
   "linux": F033D,
   "linux-mint": F08ED,
   "lipstick": F13B5,
+  "list-status": F15AB,
   "litecoin": F0A61,
   "loading": F0772,
   "location-enter": F0FC4,
@@ -3209,6 +3260,10 @@ $mdi-icons: (
   "logout-variant": F05FD,
   "longitude": F0F5A,
   "looks": F0344,
+  "lotion": F1582,
+  "lotion-outline": F1583,
+  "lotion-plus": F1584,
+  "lotion-plus-outline": F1585,
   "loupe": F0345,
   "lumx": F0346,
   "lungs": F1084,
@@ -3318,11 +3373,15 @@ $mdi-icons: (
   "message-arrow-left-outline": F12F3,
   "message-arrow-right": F12F4,
   "message-arrow-right-outline": F12F5,
+  "message-bookmark": F15AC,
+  "message-bookmark-outline": F15AD,
   "message-bulleted": F06A2,
   "message-bulleted-off": F06A3,
   "message-cog": F06F1,
   "message-cog-outline": F1172,
   "message-draw": F0363,
+  "message-flash": F15A9,
+  "message-flash-outline": F15AA,
   "message-image": F0364,
   "message-image-outline": F116C,
   "message-lock": F0FCC,
@@ -3449,11 +3508,20 @@ $mdi-icons: (
   "more": F037B,
   "mother-heart": F1314,
   "mother-nurse": F0D21,
+  "motion": F15B2,
+  "motion-outline": F15B3,
+  "motion-pause": F1590,
+  "motion-pause-outline": F1592,
+  "motion-play": F158F,
+  "motion-play-outline": F1591,
   "motion-sensor": F0D91,
   "motion-sensor-off": F1435,
   "motorbike": F037C,
   "mouse": F037D,
   "mouse-bluetooth": F098B,
+  "mouse-move-down": F1550,
+  "mouse-move-up": F1551,
+  "mouse-move-vertical": F1552,
   "mouse-off": F037E,
   "mouse-variant": F037F,
   "mouse-variant-off": F0380,
@@ -3836,6 +3904,8 @@ $mdi-icons: (
   "phone-check-outline": F11AA,
   "phone-classic": F0602,
   "phone-classic-off": F1279,
+  "phone-dial": F1559,
+  "phone-dial-outline": F155A,
   "phone-forward": F03F4,
   "phone-forward-outline": F1191,
   "phone-hangup": F03F5,
@@ -3907,6 +3977,7 @@ $mdi-icons: (
   "pirate": F0A08,
   "pistol": F0703,
   "piston": F088A,
+  "pitchfork": F1553,
   "pizza": F0409,
   "play": F040A,
   "play-box": F127A,
@@ -4003,6 +4074,7 @@ $mdi-icons: (
   "prescription": F0706,
   "presentation": F0428,
   "presentation-play": F0429,
+  "pretzel": F1562,
   "printer": F042A,
   "printer-3d": F042B,
   "printer-3d-nozzle": F0E5B,
@@ -4120,6 +4192,7 @@ $mdi-icons: (
   "refresh-circle": F1377,
   "regex": F0451,
   "registered-trademark": F0A67,
+  "reiterate": F1588,
   "relation-many-to-many": F1496,
   "relation-many-to-one": F1497,
   "relation-many-to-one-or-many": F1498,
@@ -4245,6 +4318,7 @@ $mdi-icons: (
   "router": F11E2,
   "router-network": F1087,
   "router-wireless": F0469,
+  "router-wireless-off": F15A3,
   "router-wireless-settings": F0A69,
   "routes": F046A,
   "routes-clock": F1059,
@@ -4289,7 +4363,6 @@ $mdi-icons: (
   "school": F0474,
   "school-outline": F1180,
   "scissors-cutting": F0A6B,
-  "scooter": F11E9,
   "scoreboard": F127E,
   "scoreboard-outline": F127F,
   "screen-rotation": F0475,
@@ -4326,6 +4399,7 @@ $mdi-icons: (
   "seed-off": F13FD,
   "seed-off-outline": F13FE,
   "seed-outline": F0E63,
+  "seesaw": F15A4,
   "segment": F0ECB,
   "select": F0485,
   "select-all": F0486,
@@ -4406,6 +4480,8 @@ $mdi-icons: (
   "shield": F0498,
   "shield-account": F088F,
   "shield-account-outline": F0A12,
+  "shield-account-variant": F15A7,
+  "shield-account-variant-outline": F15A8,
   "shield-airplane": F06BB,
   "shield-airplane-outline": F0CC7,
   "shield-alert": F0ECC,
@@ -4545,6 +4621,7 @@ $mdi-icons: (
   "slash-forward-box": F0FE0,
   "sleep": F04B2,
   "sleep-off": F04B3,
+  "slide": F15A5,
   "slope-downhill": F0DFF,
   "slope-uphill": F0E00,
   "slot-machine": F1114,
@@ -4570,7 +4647,12 @@ $mdi-icons: (
   "snowman": F04B7,
   "soccer": F04B8,
   "soccer-field": F0834,
+  "social-distance-2-meters": F1579,
+  "social-distance-6-feet": F157A,
   "sofa": F04B9,
+  "sofa-outline": F156D,
+  "sofa-single": F156E,
+  "sofa-single-outline": F156F,
   "solar-panel": F0D9B,
   "solar-panel-large": F0D9C,
   "solar-power": F0A72,
@@ -4688,6 +4770,8 @@ $mdi-icons: (
   "star-box-multiple": F1286,
   "star-box-multiple-outline": F1287,
   "star-box-outline": F0A74,
+  "star-check": F1566,
+  "star-check-outline": F156A,
   "star-circle": F04CF,
   "star-circle-outline": F09A4,
   "star-face": F09A5,
@@ -4695,8 +4779,15 @@ $mdi-icons: (
   "star-four-points-outline": F0AE3,
   "star-half": F0246,
   "star-half-full": F04D0,
+  "star-minus": F1564,
+  "star-minus-outline": F1568,
   "star-off": F04D1,
+  "star-off-outline": F155B,
   "star-outline": F04D2,
+  "star-plus": F1563,
+  "star-plus-outline": F1567,
+  "star-remove": F1565,
+  "star-remove-outline": F1569,
   "star-three-points": F0AE4,
   "star-three-points-outline": F0AE5,
   "state-machine": F11EF,
@@ -4740,6 +4831,7 @@ $mdi-icons: (
   "string-lights-off": F12BB,
   "subdirectory-arrow-left": F060C,
   "subdirectory-arrow-right": F060D,
+  "submarine": F156C,
   "subtitles": F0A16,
   "subtitles-outline": F0A17,
   "subway": F06AC,
@@ -4892,6 +4984,7 @@ $mdi-icons: (
   "test-tube-empty": F0911,
   "test-tube-off": F0912,
   "text": F09A8,
+  "text-account": F1570,
   "text-box": F021A,
   "text-box-check": F0EA6,
   "text-box-check-outline": F0EA7,
@@ -4987,13 +5080,19 @@ $mdi-icons: (
   "tools": F1064,
   "tooltip": F0523,
   "tooltip-account": F000C,
+  "tooltip-check": F155C,
+  "tooltip-check-outline": F155D,
   "tooltip-edit": F0524,
   "tooltip-edit-outline": F12C5,
   "tooltip-image": F0525,
   "tooltip-image-outline": F0BD5,
+  "tooltip-minus": F155E,
+  "tooltip-minus-outline": F155F,
   "tooltip-outline": F0526,
   "tooltip-plus": F0BD6,
   "tooltip-plus-outline": F0527,
+  "tooltip-remove": F1560,
+  "tooltip-remove-outline": F1561,
   "tooltip-text": F0528,
   "tooltip-text-outline": F0BD7,
   "tooth": F08C3,
@@ -5146,6 +5245,7 @@ $mdi-icons: (
   "van-passenger": F07FA,
   "van-utility": F07FB,
   "vanish": F07FC,
+  "vanish-quarter": F1554,
   "vanity-light": F11E1,
   "variable": F0AE7,
   "variable-box": F1111,
